fix(ripple): fixes ripple bug with checkboxes in lists
Reduces the ripple size slightly to prevent scrollbars from showing up in list items.  Closes #679.

--- a/src/components/checkbox/_checkbox.scss
+++ b/src/components/checkbox/_checkbox.scss
@@ -18,10 +18,12 @@ md-checkbox {
     .md-ripple-container {
       position: absolute;
       display: block;
-      width: $checkbox-width * 3; 
-      height: $checkbox-width * 3;
-      left: -$checkbox-width;
-      top: -$checkbox-width;
+      width: auto;
+      height: auto;
+      left: -15px;
+      top: -15px;
+      right: -15px;
+      bottom: -15px;
     }
   }
 
